# i18n-handbook

./: .readthedocs.yml  LICENSE.rst  README.rst  conf.py  index.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
guide/contributor/: 00-download-and-build.rst  index.rst
guide/maintainer/: 00_starting.rst  01_understanding.rst  02_jekyll.rst  index.rst
guide/translator/: 00_starting.rst  01_format.rst  02_tools.rst  index.rst
