[metadata]
name = i18n-handbook
description = "Carpentries Internationalisation Handbook"
long_description = file: README.rst
long_description_content_type = text/x-rst
author = The Carpentries Community

[options.extras_require]
docs =
  ruamel.yaml
  sphinx>=2

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1
